--- a/public/sections/physiotherapy/index.html
+++ b/public/sections/physiotherapy/index.html
@@ -3,21 +3,38 @@
 <head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Physiotherapy &amp; Wellness | The Happy Paws Hotel</title>
+    <title>Physiotherapy &amp; Wellness | Hautel Karniowice</title>
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/animations.css">
 </head>
 <body>
     <header class="site-header">
-    <a href="/">
-        <img src="/images/logo.png" alt="The Happy Paws Hotel Logo" class="site-logo">
-        <h1>The Happy Paws Hotel</h1>
-    </a>
+    <div class="header-top-bar">
+        <div class="contact-info">
+            <span>📞 +48 123 456 789</span>
+            <span>📍 Kraków, Poland</span>
+        </div>
+    </div>
+    <nav class="main-nav">
+        <ul href="/" class="logo-link">
+           <img src="/images/logo.png" class="site-logo">
+          <li> <span class="site-title">Hautel Karniowice</span></li> 
+        </ul>
+        <ul class="nav-menu">
+            <li><a href="#our-hotel">Our Hotel</a></li>
+            <li><a href="#about-me">About</a></li>
+            <li><a href="#physiotherapy">Services</a></li>
+            <li><a href="#our-clients">Clients</a></li>
+            <li><a href="#pricing">Pricing</a></li>
+            <li><a href="#terms">Terms</a></li>
+        </ul>
+    </nav>
 </header>
+
 
     <main>
         
-<div class="content">
+<div class="page-content">
     <h1>Physiotherapy &amp; Wellness</h1>
     <article>
         <p>Beyond boarding, we offer professional physiotherapy services to help your dog live a pain-free and active life. Whether recovering from an injury, managing a chronic condition like arthritis, or simply needing a relaxing massage, our tailored programs can make a world of difference.</p>
