--- a/public/404.html
+++ b/public/404.html
@@ -21,13 +21,13 @@
           <span class="site-title">Hautel Karniowice</span>
         </ul>
         <ul class="nav-menu">
-            <li><a href="#our-hotel">Our Hotel</a></li>
-            <li><a href="#about-me">About</a></li>
-            <li><a href="#physiotherapy">Services</a></li>
-            <li><a href="#our-clients">Clients</a></li>
-            <li><a href="#pricing">Pricing</a></li>
-            <li><a href="#terms">Terms</a></li>
-        </ul>
+            <li><a href="/#our-hotel">Our Hotel</a></li>
+            <li><a href="/#about-me">About</a></li>
+            <li><a href="/#physiotherapy">Services</a></li>
+            <li><a href="/#our-clients">Clients</a></li>
+            <li><a href="/#pricing">Pricing</a></li>
+            <li><a href="/#terms">Terms</a></li>
+        </ul>   
     </nav>
 </header>
 
