--- a/public/clients/index.html
+++ b/public/clients/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Max&#39;s Story | Hautel Karniowice</title>
@@ -44,14 +44,14 @@
   <div class="mb3 pa4 gray overflow-hidden bg-white">
     <span class="f6 db">Max&#39;s Story</span>
     <h1 class="f3 near-black">
-      <a href="/clients/client-2/" class="link black dim">
+      <a href="/hautel/clients/client-2/" class="link black dim">
         Historia Goldiego
       </a>
     </h1>
     <div class="nested-links f5 lh-copy nested-copy-line-height">
       
     </div>
-    <a href="/clients/client-2/" class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
+    <a href="/hautel/clients/client-2/" class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
   </div>
 </div>
 
@@ -62,14 +62,14 @@
   <div class="mb3 pa4 gray overflow-hidden bg-white">
     <span class="f6 db">Max&#39;s Story</span>
     <h1 class="f3 near-black">
-      <a href="/clients/client-1/" class="link black dim">
+      <a href="/hautel/clients/client-1/" class="link black dim">
         Max&#39;s Story
       </a>
     </h1>
     <div class="nested-links f5 lh-copy nested-copy-line-height">
       <p>&ldquo;Szczęśliwy Goldenek GOLDI&rdquo;</p>
     </div>
-    <a href="/clients/client-1/" class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
+    <a href="/hautel/clients/client-1/" class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
   </div>
 </div>
 
