--- a/public/sections/index.html
+++ b/public/sections/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sections | Hautel Karniowice</title>
@@ -43,14 +43,14 @@
   <div class="mb3 pa4 gray overflow-hidden bg-white">
     <span class="f6 db">Sections</span>
     <h1 class="f3 near-black">
-      <a href="/sections/about/" class="link black dim">
+      <a href="/hautel/sections/about/" class="link black dim">
         About Me
       </a>
     </h1>
     <div class="nested-links f5 lh-copy nested-copy-line-height">
       <p>Hello! I&rsquo;m Jan Kowalski, the founder of The Happy Paws Hotel and a certified canine physiotherapist. My journey began over a decade ago with a simple mission: to create a safe, joyful, and restorative space for dogs. I believe that every dog deserves not just care, but true well-being. Here, I combine my passion for animal welfare with professional expertise to ensure every guest at Happy Paws feels like family.</p>
     </div>
-    <a href="/sections/about/" class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
+    <a href="/hautel/sections/about/" class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
   </div>
 </div>
 
@@ -61,7 +61,7 @@
   <div class="mb3 pa4 gray overflow-hidden bg-white">
     <span class="f6 db">Sections</span>
     <h1 class="f3 near-black">
-      <a href="/sections/pricing/" class="link black dim">
+      <a href="/hautel/sections/pricing/" class="link black dim">
         Cennik (Pricing)
       </a>
     </h1>
@@ -98,7 +98,7 @@
   </tbody>
 </table>
     </div>
-    <a href="/sections/pricing/" class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
+    <a href="/hautel/sections/pricing/" class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
   </div>
 </div>
 
@@ -109,7 +109,7 @@
   <div class="mb3 pa4 gray overflow-hidden bg-white">
     <span class="f6 db">Sections</span>
     <h1 class="f3 near-black">
-      <a href="/sections/physiotherapy/" class="link black dim">
+      <a href="/hautel/sections/physiotherapy/" class="link black dim">
         Physiotherapy &amp; Wellness
       </a>
     </h1>
@@ -123,7 +123,7 @@
 <li>Strength &amp; Conditioning Exercises</li>
 </ul>
     </div>
-    <a href="/sections/physiotherapy/" class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
+    <a href="/hautel/sections/physiotherapy/" class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
   </div>
 </div>
 
@@ -134,7 +134,7 @@
   <div class="mb3 pa4 gray overflow-hidden bg-white">
     <span class="f6 db">Sections</span>
     <h1 class="f3 near-black">
-      <a href="/sections/terms/" class="link black dim">
+      <a href="/hautel/sections/terms/" class="link black dim">
         Warunki Pobytu (Terms of Stay)
       </a>
     </h1>
@@ -149,7 +149,7 @@
 </ol>
 <p><strong>Pełny regulamin pobytu dostępny jest na <a href="/regulamin/">tej stronie</a>.</strong></p>
     </div>
-    <a href="/sections/terms/" class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
+    <a href="/hautel/sections/terms/" class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
   </div>
 </div>
 
