--- a/public/regulamin/index.html
+++ b/public/regulamin/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pełny Regulamin Pobytu | Hautel Karniowice</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="/css/animations.css">
 </head>
 <body>
